<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/he"
    android:background="@color/teal_200"
    android:padding="@dimen/pa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:text="@string/altura"
            android:textSize="@dimen/siz" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:text="@string/textview"
            android:textSize="@dimen/siz" />
        <TextView
            android:id="@+id/imc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:text="@string/imc"
            android:textSize="@dimen/siz" />

        <TextView
            android:id="@+id/imc2"
            android:layout_width="109dp"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:text="@string/textview"
            android:textSize="@dimen/siz" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/peso1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:text="@string/peso"
            android:textSize="@dimen/siz" />

        <TextView
            android:id="@+id/peso2"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:text="@string/textview"
            android:textSize="@dimen/siz" />


        <TextView
            android:id="@+id/cat2"
            android:layout_width="167dp"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:text="@string/textview"
            android:textSize="@dimen/siz" />
    </LinearLayout>



</LinearLayout>