<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bfichero"
        android:layout_width="@dimen/laywei"
        android:layout_height="@dimen/layhei"
        android:layout_marginTop="@dimen/mar"
        android:text="@string/mostrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/laywei2"
        android:layout_height="@dimen/layhei2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bcalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.471">

        <RadioButton
            android:id="@+id/Hombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hombre"
            android:textSize="@dimen/text_radiobuton"
            tools:ignore="SpUsage" />

        <RadioButton
            android:id="@+id/Mujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mujer"
            android:textSize="@dimen/text_radiobuton"
            tools:ignore="SpUsage" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar2"
        android:text="@string/peso_kg"
        android:textSize="@dimen/text_normal"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar3"
        android:text="@string/Altura"
        android:textSize="@dimen/text_normal"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        android:textSize="@dimen/text_escritura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        tools:ignore="LabelFor,SpUsage" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        android:textSize="@dimen/text_escritura"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        tools:ignore="LabelFor,SpUsage" />

    <Button
        android:id="@+id/bcalcular"
        android:layout_width="@dimen/laywei"
        android:layout_height="@dimen/layhei"
        android:layout_marginTop="@dimen/mar"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="@dimen/laywei3"
        android:layout_height="@dimen/layhei3"
        android:layout_marginTop="@dimen/mar3"
        android:background="@color/grayclaro"
        android:padding="@dimen/padding_resultado"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/grayoscuro"
        android:textSize="@dimen/resultado"
        app:layout_constraintBottom_toTopOf="@+id/categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bcalcular"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/categoria"
        android:layout_width="@dimen/laywei4"
        android:layout_height="@dimen/layhei4"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bcalcular"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>